== 16 September 2024

gperftools 2.16rc is out!

This release doesn't have major fixes or big headline features, but it
has quite a lot of internal modernizations and cleanups. By the number
of commits, 2.16 is going to be our biggest release ever.

This release's main focus was making our code and building
infrastructure simpler, more straightforward, more portable, and more
modern.

Please note that the gperftools 2.16 release will be the last release
with the heap leak checker included. The time has come to drop this
feature entirely. All users should migrate to relevant gcc/clang
sanitizers.

Here are the most notable changes:

* we've upgraded our C++ standard to C++ 17. Some fraction of our code
  base was modernized.

* We've integrated (vendored copy of) GoogleTest, and most tests now
  use it. GoogleTest has helped us eliminate some legacy code and
  reduce the number of tests that use shell scripts.

* There are no more unnecessary wrappers around mutexes and threads
  for unit tests. We now use C++ standard mutexes and threads in our
  tests.

* We've done the bulk of the work necessary to enable hidden
  visibility. The most significant change is that tests no longer
  reach into libtcmalloc's guts. We use a special TestingPortal
  interface instead. We now offer the --enable-hidden-visibility
  configure option, which does what it says. But please note that
  hidden visibility is off by default for now.

* autotools build was significantly refactored, modernized and
  simplified.

* The cmake build has also been radically simplified. The previous
  version attempted to duplicate the same complexity that we had in
  the autotools build and did not do it very well. More tests now pass
  under cmake. But please note that cmake support is still not
  entirely functional, and we're not yet able to promise anything
  about it.

* Thread-local storage access and emergency malloc integration have