@@ -5,14 +5,14 @@ cmake_minimum_required(VERSION 3.12)
 
 # Based on configure.ac
 
-project(gperftools VERSION 2.15.90 LANGUAGES C CXX
+project(gperftools VERSION 2.16 LANGUAGES C CXX
         DESCRIPTION "Performance tools for C++"
         HOMEPAGE_URL https://github.com/gperftools/gperftools)
 
 # Update this value for every release!
-set(TCMALLOC_SO_VERSION 9.17.5)
-set(PROFILER_SO_VERSION 5.12.5)
-set(TCMALLOC_AND_PROFILER_SO_VERSION 10.12.6)
+set(TCMALLOC_SO_VERSION 9.18.5)
+set(PROFILER_SO_VERSION 5.13.5)
+set(TCMALLOC_AND_PROFILER_SO_VERSION 10.13.6)
 
 # The user can choose not to compile in the heap-profiler, the
 # heap-checker, or the cpu-profiler.  There's also the possibility
